# copilot-codex-bridge

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
.github/workflows/: release.yml
gui/: .gitignore  index.html  package.json  pnpm-lock.yaml
gui/src/: App.css  App.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: cli_path.rs  commands.rs  lib.rs  process.rs
gui/src/components/: LogPanel.tsx  ModelSelector.tsx  StatusCards.tsx
gui/src/lib/: api.ts  store.ts
scripts/: embed-inject.mjs
src/: index.ts
src/auth/: copilot-token.ts  device-flow.ts  token-store.ts
src/cdp/: bridge.ts  health.ts  inject-script.ts  session.ts  targets.ts
src/codex/: config.ts
src/commands/: install.ts  launch.ts  login.ts  logout.ts  start.ts  status.ts  switch.ts  uninstall.ts
src/copilot/: client.ts  headers.ts  models.ts  responses-client.ts
src/inject/: renderer-inject.js
src/server/: app.ts  catalog-route.ts  models-route.ts  responses-route.ts
src/transform/: request.ts  response.ts  sse.ts  tools.ts
